# Proyecto-No-1.-Pablo-Rubiano-Oscar-Leon

./: README.md  pyproject.toml
Cuadernos/: cuaderno1.ipynb
