[project]
name = "proyecto1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "pablorubiano2015@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ace-tools (>=0.0,<0.1)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "squarify (>=0.4.4,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
